// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flow codeGeneration covariant properties with $ReadOnlyArray 1`] = `
Object {
  "common": "

/* @flow */
/* eslint-disable */
// This file was automatically generated and should not be edited.

//==============================================================
// START Enums and Input Objects
//==============================================================

/**
 * The episodes in the Star Wars trilogy
 */
export type Episode = \\"EMPIRE\\" | \\"JEDI\\" | \\"NEWHOPE\\";

//==============================================================
// END Enums and Input Objects
//==============================================================",
  "generatedFiles": Object {
    "HeroName.js": FlowGeneratedFile {
      "fileContents": "

/* @flow */
/* eslint-disable */
// This file was automatically generated and should not be edited.

// ====================================================
// GraphQL query operation: HeroName
// ====================================================

export type HeroName_hero_Human_friends = {|
  +__typename: \\"Human\\",
  /**
   * What this human calls themselves
   */
  +name: string,
|} | {|
  +__typename: \\"Droid\\",
  /**
   * The ID of the droid
   */
  +id: string,
|};

export type HeroName_hero = {|
  +__typename: \\"Human\\",
  /**
   * What this human calls themselves
   */
  +name: string,
  /**
   * The ID of the human
   */
  +id: string,
  /**
   * The home planet of the human, or null if unknown
   */
  +homePlanet: ?string,
  /**
   * This human's friends, or an empty list if they have none
   */
  +friends: ?$ReadOnlyArray<?HeroName_hero_Human_friends>,
|} | {|
  +__typename: \\"Droid\\",
  /**
   * What others call this droid
   */
  +name: string,
  /**
   * The ID of the droid
   */
  +id: string,
  /**
   * The movies this droid appears in
   */
  +appearsIn: $ReadOnlyArray<?Episode>,
|};

export type HeroName = {|
  +hero: ?HeroName_hero
|};

export type HeroNameVariables = {|
  +episode?: ?Episode
|};",
    },
    "droidFragment.js": FlowGeneratedFile {
      "fileContents": "

/* @flow */
/* eslint-disable */
// This file was automatically generated and should not be edited.

// ====================================================
// GraphQL fragment: droidFragment
// ====================================================

export type droidFragment = {|
  +__typename: \\"Droid\\",
  /**
   * The movies this droid appears in
   */
  +appearsIn: $ReadOnlyArray<?Episode>,
|};",
    },
    "humanFragment.js": FlowGeneratedFile {
      "fileContents": "

/* @flow */
/* eslint-disable */
// This file was automatically generated and should not be edited.

// ====================================================
// GraphQL fragment: humanFragment
// ====================================================

export type humanFragment_friends = {|
  +__typename: \\"Human\\",
  /**
   * What this human calls themselves
   */
  +name: string,
|} | {|
  +__typename: \\"Droid\\",
  /**
   * The ID of the droid
   */
  +id: string,
|};

export type humanFragment = {|
  +__typename: \\"Human\\",
  /**
   * The home planet of the human, or null if unknown
   */
  +homePlanet: ?string,
  /**
   * This human's friends, or an empty list if they have none
   */
  +friends: ?$ReadOnlyArray<?humanFragment_friends>,
|};",
    },
  },
}
`;

exports[`Flow codeGeneration fragment spreads with inline fragments 1`] = `
Object {
  "common": "

/* @flow */
/* eslint-disable */
// This file was automatically generated and should not be edited.

//==============================================================
// START Enums and Input Objects
//==============================================================

/**
 * The episodes in the Star Wars trilogy
 */
export type Episode = \\"EMPIRE\\" | \\"JEDI\\" | \\"NEWHOPE\\";

//==============================================================
// END Enums and Input Objects
//==============================================================",
  "generatedFiles": Object {
    "HeroName.js": FlowGeneratedFile {
      "fileContents": "

/* @flow */
/* eslint-disable */
// This file was automatically generated and should not be edited.

// ====================================================
// GraphQL query operation: HeroName
// ====================================================

export type HeroName_hero_Human_friends = {
  __typename: \\"Human\\",
  /**
   * What this human calls themselves
   */
  name: string,
} | {
  __typename: \\"Droid\\",
  /**
   * The ID of the droid
   */
  id: string,
};

export type HeroName_hero = {
  __typename: \\"Human\\",
  /**
   * What this human calls themselves
   */
  name: string,
  /**
   * The ID of the human
   */
  id: string,
  /**
   * The home planet of the human, or null if unknown
   */
  homePlanet: ?string,
  /**
   * This human's friends, or an empty list if they have none
   */
  friends: ?Array<?HeroName_hero_Human_friends>,
} | {
  __typename: \\"Droid\\",
  /**
   * What others call this droid
   */
  name: string,
  /**
   * The ID of the droid
   */
  id: string,
  /**
   * The movies this droid appears in
   */
  appearsIn: Array<?Episode>,
};

export type HeroName = {
  hero: ?HeroName_hero
};

export type HeroNameVariables = {
  episode?: ?Episode
};",
    },
    "droidFragment.js": FlowGeneratedFile {
      "fileContents": "

/* @flow */
/* eslint-disable */
// This file was automatically generated and should not be edited.

// ====================================================
// GraphQL fragment: droidFragment
// ====================================================

export type droidFragment = {
  __typename: \\"Droid\\",
  /**
   * The movies this droid appears in
   */
  appearsIn: Array<?Episode>,
};",
    },
    "humanFragment.js": FlowGeneratedFile {
      "fileContents": "

/* @flow */
/* eslint-disable */
// This file was automatically generated and should not be edited.

// ====================================================
// GraphQL fragment: humanFragment
// ====================================================

export type humanFragment_friends = {
  __typename: \\"Human\\",
  /**
   * What this human calls themselves
   */
  name: string,
} | {
  __typename: \\"Droid\\",
  /**
   * The ID of the droid
   */
  id: string,
};

export type humanFragment = {
  __typename: \\"Human\\",
  /**
   * The home planet of the human, or null if unknown
   */
  homePlanet: ?string,
  /**
   * This human's friends, or an empty list if they have none
   */
  friends: ?Array<?humanFragment_friends>,
};",
    },
  },
}
`;

exports[`Flow codeGeneration fragment with fragment spreads 1`] = `
Object {
  "common": "

/* @flow */
/* eslint-disable */
// This file was automatically generated and should not be edited.

//==============================================================
// START Enums and Input Objects
//==============================================================

//==============================================================
// END Enums and Input Objects
//==============================================================",
  "generatedFiles": Object {
    "anotherFragment.js": FlowGeneratedFile {
      "fileContents": "

/* @flow */
/* eslint-disable */
// This file was automatically generated and should not be edited.

// ====================================================
// GraphQL fragment: anotherFragment
// ====================================================

export type anotherFragment = {
  __typename: \\"Human\\" | \\"Droid\\",
  /**
   * The ID of the character
   */
  id: string,
  /**
   * The name of the character
   */
  name: string,
};",
    },
    "simpleFragment.js": FlowGeneratedFile {
      "fileContents": "

/* @flow */
/* eslint-disable */
// This file was automatically generated and should not be edited.

// ====================================================
// GraphQL fragment: simpleFragment
// ====================================================

export type simpleFragment = {
  __typename: \\"Human\\" | \\"Droid\\",
  /**
   * The name of the character
   */
  name: string,
};",
    },
  },
}
`;

exports[`Flow codeGeneration fragment with fragment spreads with inline fragment 1`] = `
Object {
  "common": "

/* @flow */
/* eslint-disable */
// This file was automatically generated and should not be edited.

//==============================================================
// START Enums and Input Objects
//==============================================================

/**
 * The episodes in the Star Wars trilogy
 */
export type Episode = \\"EMPIRE\\" | \\"JEDI\\" | \\"NEWHOPE\\";

//==============================================================
// END Enums and Input Objects
//==============================================================",
  "generatedFiles": Object {
    "anotherFragment.js": FlowGeneratedFile {
      "fileContents": "

/* @flow */
/* eslint-disable */
// This file was automatically generated and should not be edited.

// ====================================================
// GraphQL fragment: anotherFragment
// ====================================================

export type anotherFragment_Droid = {
  __typename: \\"Droid\\",
  /**
   * The ID of the droid
   */
  id: string,
  /**
   * What others call this droid
   */
  name: string,
};

export type anotherFragment_Human = {
  __typename: \\"Human\\",
  /**
   * The ID of the human
   */
  id: string,
  /**
   * What this human calls themselves
   */
  name: string,
  /**
   * The movies this human appears in
   */
  appearsIn: Array<?Episode>,
};

export type anotherFragment = anotherFragment_Droid | anotherFragment_Human;",
    },
    "simpleFragment.js": FlowGeneratedFile {
      "fileContents": "

/* @flow */
/* eslint-disable */
// This file was automatically generated and should not be edited.

// ====================================================
// GraphQL fragment: simpleFragment
// ====================================================

export type simpleFragment = {
  __typename: \\"Human\\" | \\"Droid\\",
  /**
   * The name of the character
   */
  name: string,
};",
    },
  },
}
`;

exports[`Flow codeGeneration handles multiline graphql comments 1`] = `
Object {
  "common": "

/* @flow */
/* eslint-disable */
// This file was automatically generated and should not be edited.

//==============================================================
// START Enums and Input Objects
//==============================================================

//==============================================================
// END Enums and Input Objects
//==============================================================",
  "generatedFiles": Object {
    "CustomScalar.js": FlowGeneratedFile {
      "fileContents": "

/* @flow */
/* eslint-disable */
// This file was automatically generated and should not be edited.

// ====================================================
// GraphQL query operation: CustomScalar
// ====================================================

export type CustomScalar_commentTest = {
  __typename: \\"CommentTest\\",
  /**
   * This is a
   * multi-line
   * comment.
   */
  multiLine: ?string,
};

export type CustomScalar = {
  commentTest: ?CustomScalar_commentTest
};",
    },
  },
}
`;

exports[`Flow codeGeneration inline fragment 1`] = `
Object {
  "common": "

/* @flow */
/* eslint-disable */
// This file was automatically generated and should not be edited.

//==============================================================
// START Enums and Input Objects
//==============================================================

/**
 * The episodes in the Star Wars trilogy
 */
export type Episode = \\"EMPIRE\\" | \\"JEDI\\" | \\"NEWHOPE\\";

//==============================================================
// END Enums and Input Objects
//==============================================================",
  "generatedFiles": Object {
    "HeroInlineFragment.js": FlowGeneratedFile {
      "fileContents": "

/* @flow */
/* eslint-disable */
// This file was automatically generated and should not be edited.

// ====================================================
// GraphQL query operation: HeroInlineFragment
// ====================================================

export type HeroInlineFragment_hero = {
  __typename: \\"Human\\" | \\"Droid\\",
  /**
   * The name of the character
   */
  name: string,
  /**
   * The ID of the character
   */
  id: string,
};

export type HeroInlineFragment = {
  hero: ?HeroInlineFragment_hero
};

export type HeroInlineFragmentVariables = {
  episode?: ?Episode
};",
    },
  },
}
`;

exports[`Flow codeGeneration inline fragment on type conditions 1`] = `
Object {
  "common": "

/* @flow */
/* eslint-disable */
// This file was automatically generated and should not be edited.

//==============================================================
// START Enums and Input Objects
//==============================================================

/**
 * The episodes in the Star Wars trilogy
 */
export type Episode = \\"EMPIRE\\" | \\"JEDI\\" | \\"NEWHOPE\\";

//==============================================================
// END Enums and Input Objects
//==============================================================",
  "generatedFiles": Object {
    "HeroName.js": FlowGeneratedFile {
      "fileContents": "

/* @flow */
/* eslint-disable */
// This file was automatically generated and should not be edited.

// ====================================================
// GraphQL query operation: HeroName
// ====================================================

export type HeroName_hero_Human_friends = {
  __typename: \\"Human\\" | \\"Droid\\",
  /**
   * The name of the character
   */
  name: string,
};

export type HeroName_hero = {
  __typename: \\"Human\\",
  /**
   * What this human calls themselves
   */
  name: string,
  /**
   * The ID of the human
   */
  id: string,
  /**
   * The home planet of the human, or null if unknown
   */
  homePlanet: ?string,
  /**
   * This human's friends, or an empty list if they have none
   */
  friends: ?Array<?HeroName_hero_Human_friends>,
} | {
  __typename: \\"Droid\\",
  /**
   * What others call this droid
   */
  name: string,
  /**
   * The ID of the droid
   */
  id: string,
  /**
   * The movies this droid appears in
   */
  appearsIn: Array<?Episode>,
};

export type HeroName = {
  hero: ?HeroName_hero
};

export type HeroNameVariables = {
  episode?: ?Episode
};",
    },
  },
}
`;

exports[`Flow codeGeneration inline fragment on type conditions with differing inner fields 1`] = `
Object {
  "common": "

/* @flow */
/* eslint-disable */
// This file was automatically generated and should not be edited.

//==============================================================
// START Enums and Input Objects
//==============================================================

/**
 * The episodes in the Star Wars trilogy
 */
export type Episode = \\"EMPIRE\\" | \\"JEDI\\" | \\"NEWHOPE\\";

//==============================================================
// END Enums and Input Objects
//==============================================================",
  "generatedFiles": Object {
    "HeroName.js": FlowGeneratedFile {
      "fileContents": "

/* @flow */
/* eslint-disable */
// This file was automatically generated and should not be edited.

// ====================================================
// GraphQL query operation: HeroName
// ====================================================

export type HeroName_hero_Human_friends = {
  __typename: \\"Human\\" | \\"Droid\\",
  /**
   * The name of the character
   */
  name: string,
};

export type HeroName_hero_Droid_friends = {
  __typename: \\"Human\\" | \\"Droid\\",
  /**
   * The ID of the character
   */
  id: string,
};

export type HeroName_hero = {
  __typename: \\"Human\\",
  /**
   * What this human calls themselves
   */
  name: string,
  /**
   * The ID of the human
   */
  id: string,
  /**
   * The home planet of the human, or null if unknown
   */
  homePlanet: ?string,
  /**
   * This human's friends, or an empty list if they have none
   */
  friends: ?Array<?HeroName_hero_Human_friends>,
} | {
  __typename: \\"Droid\\",
  /**
   * What others call this droid
   */
  name: string,
  /**
   * The ID of the droid
   */
  id: string,
  /**
   * The movies this droid appears in
   */
  appearsIn: Array<?Episode>,
  /**
   * This droid's friends, or an empty list if they have none
   */
  friends: ?Array<?HeroName_hero_Droid_friends>,
};

export type HeroName = {
  hero: ?HeroName_hero
};

export type HeroNameVariables = {
  episode?: ?Episode
};",
    },
  },
}
`;

exports[`Flow codeGeneration multiple files 1`] = `"generatedFiles"`;

exports[`Flow codeGeneration multiple files 2`] = `
Object {
  "HeroName.js": FlowGeneratedFile {
    "fileContents": "

/* @flow */
/* eslint-disable */
// This file was automatically generated and should not be edited.

// ====================================================
// GraphQL query operation: HeroName
// ====================================================

export type HeroName_hero = {
  __typename: \\"Human\\" | \\"Droid\\",
  /**
   * The name of the character
   */
  name: string,
  /**
   * The ID of the character
   */
  id: string,
};

export type HeroName = {
  hero: ?HeroName_hero
};

export type HeroNameVariables = {
  episode?: ?Episode
};",
  },
  "ReviewMovie.js": FlowGeneratedFile {
    "fileContents": "

/* @flow */
/* eslint-disable */
// This file was automatically generated and should not be edited.

// ====================================================
// GraphQL mutation operation: ReviewMovie
// ====================================================

export type ReviewMovie_createReview = {
  __typename: \\"Review\\",
  /**
   * The number of stars this review gave, 1-5
   */
  stars: number,
  /**
   * Comment about the movie
   */
  commentary: ?string,
};

export type ReviewMovie = {
  createReview: ?ReviewMovie_createReview
};

export type ReviewMovieVariables = {
  episode?: ?Episode,
  review?: ?ReviewInput,
};",
  },
  "SomeOther.js": FlowGeneratedFile {
    "fileContents": "

/* @flow */
/* eslint-disable */
// This file was automatically generated and should not be edited.

// ====================================================
// GraphQL query operation: SomeOther
// ====================================================

export type SomeOther_hero = {
  __typename: \\"Human\\" | \\"Droid\\",
  /**
   * The name of the character
   */
  name: string,
  /**
   * The movies this character appears in
   */
  appearsIn: Array<?Episode>,
};

export type SomeOther = {
  hero: ?SomeOther_hero
};

export type SomeOtherVariables = {
  episode?: ?Episode
};",
  },
  "someFragment.js": FlowGeneratedFile {
    "fileContents": "

/* @flow */
/* eslint-disable */
// This file was automatically generated and should not be edited.

// ====================================================
// GraphQL fragment: someFragment
// ====================================================

export type someFragment = {
  __typename: \\"Human\\" | \\"Droid\\",
  /**
   * The movies this character appears in
   */
  appearsIn: Array<?Episode>,
};",
  },
}
`;

exports[`Flow codeGeneration multiple files 3`] = `"common"`;

exports[`Flow codeGeneration multiple files 4`] = `
"

/* @flow */
/* eslint-disable */
// This file was automatically generated and should not be edited.

//==============================================================
// START Enums and Input Objects
//==============================================================

/**
 * The episodes in the Star Wars trilogy
 */
export type Episode = \\"EMPIRE\\" | \\"JEDI\\" | \\"NEWHOPE\\";

export type ReviewInput = {|
  stars: number,
  commentary?: ?string,
  favorite_color?: ?ColorInput,
|};
/**
 *  The input object sent when someone is creating a new review
 */

export type ColorInput = {|
  red: number,
  green: number,
  blue: number,
|};
/**
 *  The input object sent when passing in a color
 */

//==============================================================
// END Enums and Input Objects
//=============================================================="
`;

exports[`Flow codeGeneration query with fragment spreads 1`] = `
Object {
  "common": "

/* @flow */
/* eslint-disable */
// This file was automatically generated and should not be edited.

//==============================================================
// START Enums and Input Objects
//==============================================================

/**
 * The episodes in the Star Wars trilogy
 */
export type Episode = \\"EMPIRE\\" | \\"JEDI\\" | \\"NEWHOPE\\";

//==============================================================
// END Enums and Input Objects
//==============================================================",
  "generatedFiles": Object {
    "HeroFragment.js": FlowGeneratedFile {
      "fileContents": "

/* @flow */
/* eslint-disable */
// This file was automatically generated and should not be edited.

// ====================================================
// GraphQL query operation: HeroFragment
// ====================================================

export type HeroFragment_hero = {
  __typename: \\"Human\\" | \\"Droid\\",
  /**
   * The name of the character
   */
  name: string,
  /**
   * The ID of the character
   */
  id: string,
};

export type HeroFragment = {
  hero: ?HeroFragment_hero
};

export type HeroFragmentVariables = {
  episode?: ?Episode
};",
    },
    "simpleFragment.js": FlowGeneratedFile {
      "fileContents": "

/* @flow */
/* eslint-disable */
// This file was automatically generated and should not be edited.

// ====================================================
// GraphQL fragment: simpleFragment
// ====================================================

export type simpleFragment = {
  __typename: \\"Human\\" | \\"Droid\\",
  /**
   * The name of the character
   */
  name: string,
};",
    },
  },
}
`;

exports[`Flow codeGeneration simple fragment 1`] = `
Object {
  "common": "

/* @flow */
/* eslint-disable */
// This file was automatically generated and should not be edited.

//==============================================================
// START Enums and Input Objects
//==============================================================

//==============================================================
// END Enums and Input Objects
//==============================================================",
  "generatedFiles": Object {
    "SimpleFragment.js": FlowGeneratedFile {
      "fileContents": "

/* @flow */
/* eslint-disable */
// This file was automatically generated and should not be edited.

// ====================================================
// GraphQL fragment: SimpleFragment
// ====================================================

export type SimpleFragment = {
  __typename: \\"Human\\" | \\"Droid\\",
  /**
   * The name of the character
   */
  name: string,
};",
    },
  },
}
`;

exports[`Flow codeGeneration simple hero query 1`] = `
Object {
  "common": "

/* @flow */
/* eslint-disable */
// This file was automatically generated and should not be edited.

//==============================================================
// START Enums and Input Objects
//==============================================================

/**
 * The episodes in the Star Wars trilogy
 */
export type Episode = \\"EMPIRE\\" | \\"JEDI\\" | \\"NEWHOPE\\";

//==============================================================
// END Enums and Input Objects
//==============================================================",
  "generatedFiles": Object {
    "HeroName.js": FlowGeneratedFile {
      "fileContents": "

/* @flow */
/* eslint-disable */
// This file was automatically generated and should not be edited.

// ====================================================
// GraphQL query operation: HeroName
// ====================================================

export type HeroName_hero = {
  __typename: \\"Human\\" | \\"Droid\\",
  /**
   * The name of the character
   */
  name: string,
  /**
   * The ID of the character
   */
  id: string,
};

export type HeroName = {
  hero: ?HeroName_hero
};

export type HeroNameVariables = {
  episode?: ?Episode
};",
    },
  },
}
`;

exports[`Flow codeGeneration simple mutation 1`] = `
Object {
  "common": "

/* @flow */
/* eslint-disable */
// This file was automatically generated and should not be edited.

//==============================================================
// START Enums and Input Objects
//==============================================================

/**
 * The episodes in the Star Wars trilogy
 */
export type Episode = \\"EMPIRE\\" | \\"JEDI\\" | \\"NEWHOPE\\";

export type ReviewInput = {|
  stars: number,
  commentary?: ?string,
  favorite_color?: ?ColorInput,
|};
/**
 *  The input object sent when someone is creating a new review
 */

export type ColorInput = {|
  red: number,
  green: number,
  blue: number,
|};
/**
 *  The input object sent when passing in a color
 */

//==============================================================
// END Enums and Input Objects
//==============================================================",
  "generatedFiles": Object {
    "ReviewMovie.js": FlowGeneratedFile {
      "fileContents": "

/* @flow */
/* eslint-disable */
// This file was automatically generated and should not be edited.

// ====================================================
// GraphQL mutation operation: ReviewMovie
// ====================================================

export type ReviewMovie_createReview = {
  __typename: \\"Review\\",
  /**
   * The number of stars this review gave, 1-5
   */
  stars: number,
  /**
   * Comment about the movie
   */
  commentary: ?string,
};

export type ReviewMovie = {
  createReview: ?ReviewMovie_createReview
};

export type ReviewMovieVariables = {
  episode?: ?Episode,
  review?: ?ReviewInput,
};",
    },
  },
}
`;
